# shep

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
engine/: CMakeLists.txt
engine/core/: engine.cpp  engine.hpp
engine/ecs/: entity.hpp  game_object.hpp  object.hpp
engine/events/: input.cpp  input.hpp
engine/graphics/: texture_manager.cpp  texture_manager.hpp
engine/physics/: rigidbody.hpp  transform.hpp  vec2.hpp
game/: frizard.cpp  frizard.hpp  game.cpp  game.hpp
